--- a/localization/default.json
+++ b/localization/default.json
@@ -12,10 +12,10 @@
       "j_viv_vivian_joker": {
         "name": "Vivian",
         "text": [
-          "Played cards with {C:purple}Spade{} suit give {C:mult}mult{}",
-          "and lose {C:chips}chips{} equal to {C:chips}chip value{} when scored",
+          "Played cards with {C:purple}Spade{} suit turn {C:chips}chips{}",
+          "into {C:mult}mult{} when scored",
           "{C:inactive}(Only counts chips from base value,{}",
-          "{C:inactive}bonus enchantment and foil edition.){}",
+          "{C:inactive}enchantment and edition.){}",
           " ",
           "{C:inactive}Character by {}{C:chips}x:@akihari_chiko{}"
         ]
