--- a/localization/default.json
+++ b/localization/default.json
@@ -4,7 +4,9 @@
       "b_viv_vivian_deck": {
         "name": "Vivian's Deck",
         "text": [
-          "Start with {C:purple,T:j_viv_vivian_joker}Vivian{} Joker"
+          "Start with {C:attention}not-for-resale{} ",
+          "{C:spectral,T:j_viv_vivian_joker}Vivian{} Joker",
+          "{C:inactive,s:0.8}(Gain {C:gold,s:0.8}0${C:inactive,s:0.8} selling him)"
         ]
       }
     },
@@ -17,7 +19,7 @@
           "{C:inactive}(Only counts chips from base value,{}",
           "{C:inactive}enchantment and edition.){}",
           " ",
-          "{C:inactive}Character by {}{C:chips}x:@akihari_chiko{}"
+          "{C:inactive}Character by","{C:chips}bsky:@akihari-chiko.bsky.social{}"
         ]
       }
     }
